--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "ionicons": "^5.4.0",
+    "magic-sdk": "^8.1.1",
+    "moralis": "^1.10.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-moralis": "^1.4.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
