--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "ethers": "^5.6.9",
     "ionicons": "^5.4.0",
     "magic-sdk": "^8.1.1",
     "moralis": "^1.10.1",
